--- a/scss/_tags.scss
+++ b/scss/_tags.scss
@@ -85,11 +85,19 @@
     }
   }
 
+  .btn-check:disabled + &,
+  .btn-check[disabled] + &,
   &[disabled],
   &.disabled {
     color: var(--#{$prefix}tag-disabled-color);
     pointer-events: none;
     border-color: var(--#{$prefix}tag-disabled-color);
+  }
+
+  .btn-check:checked + & {
+    color: var(--#{$prefix}tag-active-color);
+    background-color: var(--#{$prefix}tag-active-decoration-color);
+    border-color: var(--#{$prefix}tag-active-decoration-color);
   }
 }
 
